tdf#129976 PDF export of PDF images: adapt transparency to rendering

The bugdoc has a transparent PDF image, and we currently put a white
background behind that in Impress, given that vcl::RenderPDFBitmaps()
works with Bitmap instances, not BitmapEx ones.

This means that in case we preserve transparency during PDF export, the
content that was rendered OK now becomes unreadable.

Adapt the PDF export to do the same as rendering by putting a white
background behind the PDF image.

(cherry picked from commit 7088140dbf1d5e0391c2662f0213018a45620ff9)

Change-Id: I4edcb12fab71bb305d97a50d20fbfbf86d9aab85
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/87956
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@cib.de>